Added speek messages to the API
