# server/modules_api/server_cmd.py
@@ -9,6 +9,7 @@ import modules.jcCouchDB      as jcCouch
 import modules.music_load     as music_load
 import modules.music_control  as music_ctrl
 import modules.stream_control as radio_ctrl
+import modules.speekmsg       as speek
 
 from modules.runcmd           import *
 from modules_api.server_init  import *
@@ -19,6 +20,10 @@ if stage.test:
     if mbox.DEBUG: logging.basicConfig(level=logging.DEBUG)  # DEBUG, INFO, WARNING, ERROR, CRITICAL
     else:          logging.basicConfig(level=logging.INFO)   # DEBUG, INFO, WARNING, ERROR, CRITICAL
 else:              logging.basicConfig(level=logging.WARN)    # DEBUG, INFO, WARNING, ERROR, CRITICAL
+
+
+thread_speek = speek.speekThread(4, "Thread Radio", 1, "")  #  jcJSON.read("music"), jcJSON.read("radio"))
+thread_speek.start()
 
 #-------------------------------------------------
 
@@ -172,6 +177,18 @@ def mboxAPI_setCard(cardUID):
        data = mboxAPI_end(data)
        return(data)
 
+# ---
+
+def mboxAPI_speek(message):
+       '''set card UID by microservice to central var'''
+
+       data  = mboxAPI_start("speek","speek","",message,"")
+
+       thread_speek.speek_message(message)
+
+       data = mboxAPI_end(data)
+       return(data)
+       
 # ---
 
 def mboxAPI_setButton(buttonID):
